
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.common.runtime;
import "caikit_data_model_common.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message ModelInfo {

  /*-- nested messages --*/

  /*-- fields --*/
  string model_path = 1;
  string name = 2;
  int64 size = 3;
  map<string, string> metadata = 4;
  bool loaded = 7;
  string module_id = 5;
  map<string, string> module_metadata = 6;
}

message ModelInfoRequest {

  /*-- fields --*/
  repeated string model_ids = 1;
}

message ModelInfoResponse {

  /*-- fields --*/
  repeated caikit_data_model.common.runtime.ModelInfo models = 1;
}

message RuntimeInfoRequest {
}

message RuntimeInfoResponse {

  /*-- nested messages --*/

  /*-- fields --*/
  string runtime_version = 1;
  map<string, string> python_packages = 2;
}
